<resources>
    <string name="app_name">DigiJournal</string>
    <string name="nav_header_title">DigiJournal</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="login_button">Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_add_category">New Category</string>
    <string name="menu_add_list">New List</string>
    <string name="menu_add_task">Add a task</string>
    <string name="home_category">Categories</string>
    <string name="home_welcome">Welcome to DigiJournal!</string>
    <string name="home_hint">Swipe left to explore</string>
    <string name="home_subheader">Your online bullet journal</string>
    <string name="category_add_list">Add a list to this category</string>
    <string name="task_done_label">Status</string>
    <string name="task_add_title_hint">Title…</string>
    <string name="task_add_heading">New Task</string>
    <string name="task_add_desc">Details</string>
    <string name="task_add_desc_hint">Description…</string>
    <string name="task_add_deadline">Deadline:</string>
    <string name="task_add_toList">Add to list:</string>
    <string name="task_add_date_format_hint">dd/mm/yyyy</string>
    <string name="task_edit_heading">Editing Task</string>
    <string name="add_name_hint">Name…</string>
    <string name="edit_button">Edit</string>
    <string name="save_button">Save</string>
    <string name="create_button">Create</string>
    <string name="cancel_button">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>