<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/lists"
            android:title="@string/menu_lists" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/tasks"
            android:title="@string/menu_tasks" />
    </group>
</menu>