<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    android:backgroundTint="@color/pastel_blue"
    tools:context=".Task.TaskEditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/task_edit_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/task_edit_heading"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintBottom_toTopOf="@+id/task_edit_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/task_add_title_hint"
                android:inputType="textPersonName"
                android:text="@string/add_name_hint"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/detail_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_edit_header"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/task_add_desc"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/task_edit_detail_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_edit_title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_edit_detail_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/task_add_desc_hint"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/task_add_desc"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/task_edit_deadline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_label" />

            <TextView
                android:id="@+id/task_edit_deadline_label"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/task_add_deadline"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/task_edit_deadline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/task_edit_deadline"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/task_edit_deadline"
                android:layout_width="0dp"
                android:layout_height="60sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:ems="12"
                android:hint="@string/task_add_date_format_hint"
                android:textSize="18sp"
                android:inputType="time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/task_edit_deadline_label"
                app:layout_constraintTop_toBottomOf="@+id/task_edit_detail_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/task_edit_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save_button" />

</FrameLayout>