<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Task.TaskDetailsFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="[taskName]"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/detail_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/detail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/task_add_desc"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/detail_text"
            />

        <TextView
            android:id="@+id/detail_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/task_add_desc_hint"
            android:text="[Description text]"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toTopOf="@id/deadline_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_label" />

        <TextView
            android:id="@+id/deadline_textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_margin="10dp"
            android:text="@string/task_add_deadline"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_button"
            app:layout_constraintEnd_toStartOf="@+id/deadline_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/deadline_textView" />

        <TextView
            android:id="@+id/deadline_textView"
            android:layout_width="0dp"
            android:layout_height="60sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:ems="12"
            android:inputType="date"
            android:hint="@string/task_add_date_format_hint"
            android:text="[01/01/3001]"
            app:layout_constraintBottom_toTopOf="@+id/edit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/deadline_textView"
            app:layout_constraintTop_toBottomOf="@+id/detail_text" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/deadline_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>