<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/vertical_rainbow_gradient"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/nav_header_main_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/home_hint"
            app:layout_constraintBottom_toTopOf="@id/nav_header_main_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_icon" />

        <TextView
            android:id="@+id/nav_header_main_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/add_name_hint"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/nav_header_main_user_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nav_header_main_user_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/nav_header_subtitle"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>